--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "babel-extract-comments": "^1.0.0",
+    "confusing-browser-globals": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1",
+    "react-router": "^6.24.0",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "schema-utils": "^4.2.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "web-vitals": "^2.1.4",
+    "workbox-build": "^7.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "core-js-pure": "^3.37.1"
   }
 }
